===========================================================================

3.9.3 to 4.0: (xxxx xx, 2014)

  * Added preliminary support for 'DASH' bankswitching scheme by A. Davie.

  * Added 'savesnap' debugger prompt command, and also associated
    context menu item to the debugger TIA output area.  This saves the
    current TIA image to a PNG file.

  * Removed 'uipalette' option, as the original palette is no longer
    supported.

  * Updated included PNG library to latest stable version.

-Have fun!


3.9.2 to 3.9.3: (January 20, 2014)

  * Added bankswitch schemes BF, BFSC, DF, DFSC and 4KSC, thanks to
    RevEng and CPUWIZ of AtariAge.
 
  * Updated ROM properties for several ROMs, thanks to Omegamatrix of
    AtariAge.

  * Fixed program crash when specifying a bankswitch type that Stella
    didn't recognize; an error message is now displayed.


3.9.1 to 3.9.2: (August 31, 2013)

  * Improved parsing of the DASM lst file for the debugger disassembly;
    it sometimes missed constant declarations.

  * Changed 'usemouse' argument from a true/false option to accept
    'always', 'analog' and 'never'.  This allows to use the mouse as a
    controller under more specific circumstances.  The default is
    'analog', which means the mouse is only used to emulate analog-like
    devices (paddles, trackball, etc).

  * Added ability to use bold fonts within the debugger window, which can
    be set with the 'dbg.fontstyle' commandline argument as well as in the
    debugger UI Settings dialog.  This is useful for those that find the
    current font too narrow.

  * Renamed 'debuggerres' argument to 'dbg.res'.  All future debugger-
    specific options will start with 'dbg.'.

  * The TIA 'zoom' area in the debugger now supports scrolling the
    mouse wheel (currently up/down only, as I don't have a sideways
    scrolling mouse to test with).


3.9 to 3.9.1: (August 21, 2013)

  * Note: because of TIA/6502 changes, the state file format has changed